New in v0.6.05 (2009/08/??)
---------------------------
Bugs fixed this release:
409593  deja-dup (or duplicity) deletes all signatures
408059  Failure due to _logger.log failure for content with special
        characters: TypeError decoding Unicode not supported


New in v0.6.04 (2009/08/01)
---------------------------
One major and one minor change.  The "No such file or directory" error
is bad enough that this should be released quickly.  For those of you
using encryption, this is not a problem, but for those of you that do
not use encryption (--no-encryption), then this will manifest itself if
the local cache gets out of sync with the remote store.

Bugs fixed this release:
405734  duplicity fails to restore files that contain a newline character
403790  Backup error: No such file or directory


New in v0.6.03 (2009/07/29)
---------------------------
Lots of small changes and some bug fixes.
* Restart error handling has been smoothed out a great deal and it
  "does what is right" in order to keep going.
* Backends are now optional, if they fail an Info message is put out
  to notify of the failure and why.
* There was more work on translations and internationalization.
Thanks to everyone!

Bugs fixed this release:
377528  --file-to-restore doesn't work with trailing slash
394757  Backend imports should be made optional
398230  Deja-dup backup fails with message: "Unable to locate last file"
401303  0.6.2 manpage inconsistent wrt. archive-dir/name
405646  Small i18n error
405975  duplicity.gpg.gpg_failed() breaks and spews on GnuPG error
402794  duplicity public-key-only incompatible with gnupg 2.0.11


New in v0.6.02 (2009/07/07)
---------------------------
Duplicity will now remove any spurious files left in the cache from
a previous run.  This will keep the metadata cache in sync with the
remote storage metadata.

Bugs fixed this release:
394629  Hang on first collection-status
379386  Fix 'list-current-files' with missing archive dir